Added: 1. Added spring security 2. Spring security Auth in db 3. CustomUserDetails uses DECORATOR to work with User 4. Remember me token saved in browser 5. V1__init changes